Wed Aug 13 08:42:19 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.h:
          Added #include SString.h needed due to recent subsetting.

        * orbsvcs/Notify_Service/NT_Notify_Service.cpp:
          Added #include Reactor.h needed due to recent subsetting.

Wed Aug 13 08:25:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/EC_Throughput/run_test.pl:
          Explicitly set the scheduler type to local because this test
          uses the new RTEvent but wants to use a scheduler. This fixes
          the failing of this test in the daily builds.

Tue Aug 12 22:18:42 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:

          Regenerated type codes initialized in the constructor of
          TAO_Valuetype_Adapter_Impl to have the "omg.org" prefix.

Tue Aug 12 17:05:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/corbafwd.cpp:
        * tao/corbafwd.h:

          Removed CORBA::_tc_Visibility and CORBA::_tc_ValueModifier.

        * tao/Valuetype/ValueBase.cpp:
        * tao/Valuetype/ValueBase.h:

          Added declaration and initialization to 0 of the above two
          type codes plus CORBA::_tc_ValueBase. Thanks to Frank
          Pilhofer <fpilhofe@mc.com> for pointing out the lack of
          _tc_ValueBase.

        * tao/Valuetype/Valuetype_Adapter_Impl.cpp:
        * tao/Valuetype/Valuetype_Adapter_Impl.h:

          Added default constructor in which to do the actual initialization
          of the 3 type codes mentioned above. They are released in the
          destructor.

Tue Aug 12 17:49:27 2003  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* examples/RTScheduling/Fixed_Priority_Scheduler/run_test.pl:
	* examples/RTScheduling/MIF_Scheduler/run_test.pl:

	  Added scripts to run the RTScheduler examples.

Tue Aug 12 06:27:19 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
